--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/sky_blue"
+    android:fontFamily="@font/cafe"
     app:titleTextColor="@color/white">
     <!--
         <TextView
@@ -18,6 +19,7 @@
     -->
     <com.tiper.MaterialSpinner
         android:id="@+id/spinner"
+        android:fontFamily="@font/cafe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minHeight="48dp"
