--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -23,6 +23,7 @@
         android:background="#faf7f7"
         android:elevation="20dp"
         android:hint="이곳에 제목을 입력해주세요"
+        android:fontFamily="@font/cafe"
         android:paddingLeft="20dp"
         android:paddingTop="12dp"
         android:paddingBottom="7dp"
@@ -41,6 +42,7 @@
         android:elevation="20dp"
         android:gravity="top|left"
         android:hint="이곳에 내용을 입력해주세요"
+        android:fontFamily="@font/cafe"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
         android:textColor="@color/black"
@@ -57,6 +59,7 @@
         android:elevation="10dp"
         android:stateListAnimator="@null"
         android:text="작성 완료"
+        android:fontFamily="@font/cafe"
         android:translationZ="5dp" />
 
 
