--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -31,6 +31,7 @@
             android:background="#faf7f7"
             android:elevation="20dp"
             android:hint="게시글 제목을 입력해주세요."
+            android:fontFamily="@font/cafe"
             android:importantForAutofill="no"
             android:inputType="none"
             android:paddingStart="10dp"
@@ -46,6 +47,7 @@
             android:elevation="20dp"
             android:gravity="top|start"
             android:hint="내용을 입력하세요"
+            android:fontFamily="@font/cafe"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
             android:minHeight="48dp"
@@ -68,6 +70,7 @@
             android:paddingBottom="14dp"
             android:stateListAnimator="@null"
             android:text="작성 완료"
+            android:fontFamily="@font/cafe"
             android:textColor="#ffffff"
             android:translationZ="5dp" />
     </LinearLayout>
