--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -14,6 +14,7 @@
         android:paddingTop="8dp"
         android:paddingBottom="10dp"
         android:text="Title"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="40dp" />
 
@@ -24,6 +25,7 @@
         android:layout_below="@+id/bulletinTitle"
         android:padding="15dp"
         android:text="Auth"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="20dp" />
 
@@ -37,6 +39,7 @@
         android:paddingLeft="15dp"
         android:paddingTop="20dp"
         android:text="Body"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="20dp" />
 
@@ -69,6 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="likes"
+            android:fontFamily="@font/cafe"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
