--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -14,6 +14,7 @@
         android:paddingTop="8dp"
         android:paddingBottom="10dp"
         android:text="Title"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="40dp" />
 
@@ -27,6 +28,7 @@
         android:paddingLeft="15dp"
         android:paddingTop="20dp"
         android:text="Body"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="20dp" />
 
