--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="이곳에서\n작성한 메모에요!"
+        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold" />
