--- a/app/src/main/res/layout/memo_layout.xml
+++ b/app/src/main/res/layout/memo_layout.xml
@@ -32,6 +32,7 @@
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
                     android:text="This is memo"
+                    android:fontFamily="@font/cafe"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
@@ -46,6 +47,7 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="20dp"
                 android:text="This is content"
+                android:fontFamily="@font/cafe"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
         </LinearLayout>
