--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -25,12 +25,12 @@
         android:layout_above="@+id/bottomlayout"
         android:layout_below="@+id/memoTitle"
         android:background="@drawable/blue_border"
+        android:fontFamily="@font/nanum"
         android:paddingLeft="15dp"
         android:paddingTop="20dp"
         android:text="Body"
-        android:fontFamily="@font/cafe"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="25dp" />
 
     <LinearLayout
         android:id="@+id/bottomlayout"
