--- a/app/src/main/res/layout/activity_modify_memo.xml
+++ b/app/src/main/res/layout/activity_modify_memo.xml
@@ -27,9 +27,9 @@
             android:gravity="top"
             android:paddingLeft="20dp"
             android:text="Body"
-            android:fontFamily="@font/cafe"
+            android:fontFamily="@font/nanum"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="25dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
