--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,5 +26,8 @@
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
+    <style name="SpinnerTheme">
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
